fix(ui): add horizontal padding to form containers on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,15 @@ ul {
   .picture {
     visibility: hidden;
   }
+
+  .loginForm,
+  .registerForm,
+  .passwordForm,
+  .artworkForm,
+  .eventForm {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 }
 
 .navbar-light .navbar-brand {
